--- a/index.html
+++ b/index.html
@@ -1,16 +1,64 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pl">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>Document Title</title>
-		<link rel="stylesheet" href="css/screen.css" />
+		<title>test</title>
+		<link rel="stylesheet" href="./css/reset.css" />
+		<link rel="stylesheet" href="./css/screen.css" />
 	</head>
 	<body>
 		<div class="wrapper">
-            
-        </div>
+			<div class="mobile-menu">
+				<ul class="mobile-menu--list">
+					<li class="mobile-menu--item"><a class="mobile-menu--link" href="#">Ogłoszenia</a></li>
+					<li class="mobile-menu--item"><a class="mobile-menu--link" href="#">Obłożenie</a></li>
+					<li class="mobile-menu--item"><a class="mobile-menu--link" href="#">Statystyki</a></li>
+					<li class="mobile-menu--item"><a class="mobile-menu--link" href="#">FAQ</a></li>
+					<li class="mobile-menu--item"><a class="mobile-menu--link" href="#">Kontakt</a></li>
+				</ul>
+			</div>
+			<section class="ogloszenia">
+				<h2>Ogłoszenia</h2>
+				<p class="description">Ogłoszenia przekazywane przez kirownictow oddziału</p>
+
+				<article class="news-wrapper">
+					<header>
+						<h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+						<div class="info">
+							<img
+								class="avatar"
+								src="https://scontent-waw1-1.xx.fbcdn.net/v/t1.6435-9/102824645_253339156084616_814709381748336653_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=vMkBEkmiduEAX-F99cU&tn=U2BKANsS0As3rjaU&_nc_ht=scontent-waw1-1.xx&oh=00_AT_3eAKaXIXx9shyhDAGgPtGPNq-wnZV4a4hY72g7hFE1g&oe=63483060"
+							/>
+							<a class="author" href="#">Damian Moliński</a>
+							<p class="added-time">13 września 2022, 22:37</p>
+						</div>
+					</header>
+					<p>
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum quo maiores ipsum quibusdam
+						optio molestias atque! Porro, earum aspernatur provident magni sed suscipit veritatis
+						animi libero! Nihil deleniti saepe porro! Consectetur quidem libero hic cupiditate rerum
+						distinctio vel adipisci autem nihil non reprehenderit, alias error explicabo iste quia
+						nam vitae aliquam laborum officia id, ratione ad. Nostrum tenetur animi reprehenderit!
+						Ipsa neque placeat distinctio accusamus consequatur praesentium fugiat sapiente qui
+						nostrum ipsam laudantium nisi, iste tenetur ab deserunt, totam quam atque laborum
+						tempora? Voluptatum voluptate veritatis, fuga amet impedit nihil voluptatibus molestiae
+						quis necessitatibus vero quia totam, reprehenderit, optio delectus ducimus magnam? Odio
+						cum necessitatibus itaque nisi iusto voluptate, eum rerum porro non. Pariatur ratione
+						nisi atque doloribus, ullam inventore dolor corporis quas at vero quae. Perferendis
+						necessitatibus dolore sit excepturi obcaecati nemo veniam vitae? Mollitia id officia
+						accusamus illum eum consequuntur numquam? Suscipit iure, animi quam illo vero quisquam
+						totam facilis impedit! Quasi, asperiores qui numquam quae enim veniam quaerat tempora
+						nihil consequatur.
+					</p>
+					<footer>
+						<div class="news-wrapper-footer--author"><a href="#">Damian Moliński</a></div>
+						<div class="news-wrapper-footer--comments"><a href="#">Komentarzy (174)</a></div>
+					</footer>
+				</article>
+			</section>
+		</div>
 		<script src="./js/main.js"></script>
 	</body>
 </html>
